GNOME Bugzilla – Bug 766718
souphttpsrc: fix buffer leak when flushing
Last modified: 2016-05-20 16:45:45 UTC
.
Created attachment 328259 [details] [review] souphttpsrc: fix buffer leak when flushing When early returning in gst_soup_http_src_read_buffer() because the element is FLUSHING, we need to unmap and unref the buffer which was just created.
commit 6fd04b07fca81acf598b1695033bea4e72c32560 Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk> Date: Fri May 20 16:47:35 2016 +0300 souphttpsrc: fix buffer leak when flushing When early returning in gst_soup_http_src_read_buffer() because the element is FLUSHING, we need to unmap and unref the buffer which was just created. https://bugzilla.gnome.org/show_bug.cgi?id=766718